<resources>
    <string name="app_name">MyTrackItCoach</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_choose">ChooseActivity</string>
    <string name="press_text_view">Press</string>
    <string name="to_start">Start</string>
    <string name="start_label_text">On your marks!</string>
    <string name="coach_button_text">COACH</string>
    <string name="gps_button_text">GPS</string>
    <string name="review_button_text">REVIEW</string>
    <string name="title_activity_review_main">ReviewMainActivity</string>
    <string name="title_activity_event_setup">EventSetupActivity</string>
    <string name="title_activity_gpstracker">GPSTrackerActivity</string>
    <string name="title_activity_athlete_select">AthleteSelectActivity</string>
    <string name="title_activity_search_records">SearchRecordsActivity</string>
    <string name="title_activity_add_and_remove_athlete">AddAndRemoveAthleteActivity</string>
    <string name="title_activity_remove_athlete">RemoveAthleteActivity</string>
    <string name="available_athletes_textView">Available Athletes</string>
    <string name="choose_event_text">Choose Event</string>
    <string name="event_setup_textView">Choose Event</string>
    <string name="event_add_athlete_button">Add Athlete</string>
    <string name="event_remove_athlete_button">Remove Athlete</string>
    <string name="create_event_button">Create Event</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="tap_athletes_text">Hold Down to Add</string>
    <string name="selected_athletes_column">Selected Athletes</string>
    <string name="start_event_button">Start Event</string>
    <string name="title_activity_run_event">RunEventActivity</string>
    <string name="save_athlete_button">Save Athlete</string>
    <string name="male_checkbox">     Male</string>
    <string name="female_checkbox">    Female</string>
    <string name="title_activity_view_report">ViewReportActivity</string>
    <string name="send_email_text_button">Send Email</string>
    <string name="search_type">Search Type:</string>
    <string name="title_activity_review_by_athlete_select">ReviewByAthleteSelectActivity</string>
    <string name="title_activity_athlete__report">Athlete_Report</string>
    <string name="title_activity_event_report_view">Event_report_view</string>
    <string name="title_activity_event_report">EventReportActivity</string>



    // Todd Code
    <string name="buttonEndEvent">EndEvent</string>
    <string name="buttonPrev">Prev</string>
    <string name="buttonNext">Next</string>
    <string name="textViewAthlete">Athlete</string>
    <string name="textViewEventName">Event</string>
    <string name="editTextHeight">Measure</string>
    <string name="checkBoxForm">Form</string>
    <string name="checkBoxBreath">Breathing</string>
    <string name="checkBoxHunger">Hunger</string>
    <string name="checkBoxTired">Tired</string>
    <string name="buttonHeight">Enter</string>
    <string name="buttonEndTime">EndTime</string>
    <string name="buttonLap">Lap</string>
    <string name="buttonStartTime">StartTime</string>
    <string name="buttonResetTimer">ResetTimer</string>
    <string name="editTextDataLog">Enter Notes</string>
    <string name="save_report_button_text">Save</string>
    <string name="remove_athlete_button">Remove</string>

</resources>
