<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:background="@drawable/bg_gradient"
              android:orientation="vertical"
              android:focusable="true"
              android:focusableInTouchMode="true"
              tools:context="com.hippie.trackitcoach.ui.EventSetupActivity">

    <LinearLayout
        android:id="@+id/Top_Container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonEndEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="EndandFinsihEvent"
                    android:text="@string/buttonEndEvent"
                    android:textColor="@color/colorButtonText"/>

                <Button
                    android:id="@+id/buttonPrev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/buttonPrev"
                    android:textColor="@color/colorButtonText"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewAthlete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/textViewAthlete"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/buttonNext"
                    android:textColor="@color/colorButtonText"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_report_button_text"
                    android:id="@+id/save_report_button"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:singleLine="false"
                    android:textColor="@android:color/white"/>


            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/Middle_Container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >


            <Button
                android:id="@+id/buttonResetTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonResetTimer"
                android:textColor="@color/colorButtonText"/>

            <Button
                android:id="@+id/buttonStartTIme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/buttonStartTime"
                android:textColor="@color/colorButtonText"/>

            <TextView
                android:id="@+id/chronometerTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="46sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonLap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:text="@string/buttonLap"
                android:textColor="@color/colorButtonText"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"/>


            <Button
                android:id="@+id/buttonEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/buttonEndTime"
                android:textColor="@android:color/white"/>

        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonHeight"
                android:textColor="@color/colorButtonText"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:src="@drawable/zzz_32x32"
                    android:layout_gravity="center"/>

                <CheckBox
                    android:id="@+id/checkBoxTired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/buttonHeight"
                    android:checked="false"
                    android:text="@string/checkBoxTired"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:src="@drawable/stomach_32x32"
                    android:layout_gravity="center"/>

                <CheckBox
                    android:id="@+id/checkBoxHunger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/checkBoxTired"
                    android:checked="false"
                    android:text="@string/checkBoxHunger"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:src="@drawable/lungs_32x32"
                    android:layout_gravity="center"/>

                <CheckBox
                    android:id="@+id/checkBoxBreath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/checkBoxHunger"
                    android:checked="false"
                    android:text="@string/checkBoxBreath"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:layout_gravity="center"
                    android:src="@drawable/run_32x32"/>

                <CheckBox
                    android:id="@+id/checkBoxForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/checkBoxBreath"
                    android:checked="false"
                    android:text="@string/checkBoxForm"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextHeight"
                    android:layout_width="76dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/editTextHeight"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textViewEventName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTextHeight"
                    android:text="@string/textViewEventName"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fillViewport="false"></ScrollView>

                <EditText
                    android:id="@+id/editTextDataLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:hint="@string/editTextDataLog" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Results"
                    android:id="@+id/textViewResults"
                    android:layout_above="@+id/editTextDataLog"
                    android:layout_alignStart="@+id/editTextDataLog" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
