<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.hippie.trackitcoach.ui.AddAthleteActivity"
                android:background="@drawable/bg_gradient"
                android:focusable="true"
                android:focusableInTouchMode="true">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_editText"
        android:layout_below="@+id/names_and_sex_boxes"
        android:layout_alignParentLeft="true"
        android:hint="Email"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_athlete_button"
        android:id="@+id/save_athlete_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style=".75"
        android:alpha=".75"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/list"
        android:layout_below="@+id/email_editText"
        android:layout_above="@id/save_athlete_button"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/names_and_sex_boxes"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/firstName_editText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:hint="First Name"
                    android:layout_weight="1"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male_checkbox"
                    android:id="@+id/male_check_box"
                    android:layout_weight="3"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/lastName_editText"
                    android:layout_below="@+id/firstName_editText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:hint="Last Name"
                    android:layout_weight="1"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female_checkbox"
                    android:id="@+id/female_check_box"
                    android:layout_weight="3"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
